# bookmarks

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  TODO.md  docker-compose.yml  flake.nix  otel-collector-config.yaml  pyproject.toml
.github/workflows/: test.yml
bookmarks/: Cargo.toml
bookmarks/src/: cmd.rs  main.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/agent/: executor.rs  json_schema_enhancer.rs  mod.rs  parser.rs  prompt.rs
common/src/dag/: executor.rs  graph.rs  mod.rs  task.rs
common/src/llm/: downloader.rs  gpu.rs  mod.rs  model.rs
common/src/schema/: hints.rs  inference.rs  json_schema.rs  mod.rs
common/src/tracing/: init.rs  mod.rs
native/src/: lib.rs
src/bookmarks/: __init__.py  cli.py  graph.py  tracing.py
src/bookmarks/agents/: __init__.py  llama_cpp_model.py  schema_sql_agent.py
src/bookmarks/cli/: __init__.py  common.py  embed.py  gen.py  models.py  schema.py  vis.py
src/bookmarks/graphs/: __init__.py  embed.py  schema.py
tests/: test_cli.py  test_gguf_downloader.py  test_gpu.py  test_graph.py
