[workspace]
resolver = "2"
members = ["common", "bookmarks"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = { version = "0.28", features = ["trace", "rt-tokio"] }
opentelemetry-resource-detectors = { version = "0.7" }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.28" }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-opentelemetry = "0.29"

# LLM inference
llm = "1.3"

# Model downloading
hf-hub = "0.3"

# Regex for DDL extraction
regex = "1.10"

# Random number generation
rand = "0.8"

# Memory allocator
mimalloc = "0.1"

# Path/filesystem
once_cell = "1.19"
