[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "bookmarks"
version = "0.1.0"
description = "Agent-driven CLI for hydrating bookmark exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Adam Williams" }
]
dependencies = [
  "fastembed>=0.7.4",
  "langchain-community>=0.4",
  "langchain-core>=1.1.3",
  "langgraph>=1.0.4",
  "llama-cpp-python>=0.3.0",
]

[project.scripts]
bookmarks = "bookmarks.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.14"
]
torch = [
  "torch>=2.9"
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "ruff>=0.14"
]
torch = [
  "torch>=2.9"
]
