[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bookmarks"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
mimalloc = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
