[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

# LLM
llm = { workspace = true }
hf-hub = { workspace = true }

# OTEL
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
